main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 3.0"
    }
  }

  backend "s3" {
    bucket         = "aws-nsoungadoy2-bbg-tf-state"
    key            = "networking/vpc/terraform.tfstate"
    region         = "eu-west-2"
    dynamodb_table = "tf-state-lock"
  }
}

provider "aws" {
  region = "eu-west-2"
}

resource "aws_vpc" "main" {
  cidr_block = "172.31.0.0/16"
  tags = {
    Name  = "main-vpc"
    Group = "Networking"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main-igw"
  }
}

resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id

  }
}


# DMZ

resource "aws_subnet" "public_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "172.31.1.0/24"
  availability_zone = "eu-west-2a"
  tags = {
    Name  = "Public-1"
    Group = "Networking"
  }
}

resource "aws_route_table_association" "rt_assoc_1" {
  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.public_route_table.id
  # depends_on     = [aws_route_table.public_route_table]
}

resource "aws_subnet" "public_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "172.31.2.0/24"
  availability_zone = "eu-west-2b"
  tags = {
    Name  = "Public-2"
    Group = "Networking"
  }
}

resource "aws_route_table_association" "rt_assoc_2" {
  subnet_id      = aws_subnet.public_2.id
  route_table_id = aws_route_table.public_route_table.id
  # depends_on     = [aws_route_table.public_route_table]
}

resource "aws_subnet" "public_3" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "172.31.3.0/24"
  availability_zone = "eu-west-2c"
  tags = {
    Name  = "Public-3"
    Group = "Networking"
  }
}

resource "aws_route_table_association" "rt_assoc_3" {
  subnet_id      = aws_subnet.public_3.id
  route_table_id = aws_route_table.public_route_table.id
  # depends_on     = [aws_route_table.public_route_table]
}

# Private Zone

resource "aws_subnet" "private_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "172.31.4.0/24"
  availability_zone = "eu-west-2a"
  tags = {
    Name  = "Private-1"
    Group = "Networking"
  }
}

resource "aws_subnet" "private_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "172.31.5.0/24"
  availability_zone = "eu-west-2b"
  tags = {
    Name  = "Private-2"
    Group = "Networking"
  }
}

resource "aws_subnet" "private_3" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "172.31.6.0/24"
  availability_zone = "eu-west-2c"
  tags = {
    Name  = "Private-3"
    Group = "Networking"
  }
}

resource "aws_eip" "ngw_eip" {
  vpc = true
  tags = {
    Name  = "ngw-eip-1"
    Group = "Networking"
  }
}

resource "aws_nat_gateway" "ngw_1" {
  allocation_id = aws_eip.ngw_eip.id
  subnet_id     = aws_subnet.public_1.id

  tags = {
    Name  = "ngw-1"
    Group = "Networking"
  }
  depends_on = [aws_internet_gateway.igw]
}


resource "aws_route" "ngw_route" {
  route_table_id         = aws_vpc.main.main_route_table_id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.ngw_1.id
}
